<resources>
    <string name="app_name">ZS Wallpapers</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="privacy_policy_url">https://www.your.com/privacyurl</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=YOUR+PLAY+URL</string>

    <!-- true if want to use RTL else false -->
    <string name="isRTL">false</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="categories">Categories</string>
    <string name="gifs">GIFs</string>
    <string name="favourite">Favourite</string>
    <string name="rateapp">Rate App</string>
    <string name="shareapp">Share App</string>
    <string name="moreapp">More App</string>
    <string name="menu_about">About</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading">Loading..</string>
    <string name="portrait_wallpaper">Portrait Wallpaper</string>
    <string name="view_all">View All</string>
    <string name="no_data_found">No Data Found</string>
    <string name="mostviewed">Most Viewed</string>
    <string name="square_wallpaper">Square Wallpaper</string>
    <string name="amazing_wall">Best HD Quality Wallpapers In Your Way</string>
    <string name="title_activity_wallpaper">Wallpaper</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="download">Download</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="ratings">Ratings</string>
    <string name="tags">Tags</string>
    <string name="details">Details</string>
    <string name="downloading_wallpaper">Downloading Wallpaper..</string>
    <string name="please_wait">Please Wait..</string>
    <string name="wallpaper_saved">Wallpaper Saved</string>
    <string name="share_wallpaper">Share Wallpaper</string>
    <string name="please_try_again">Please try again</string>
    <string name="wallpaper_already_saved">Wallpaper Already Saved</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>
    <string name="set_wallpaper">Set As</string>
    <string name="wallpaper_set">Wallpaper Set</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_rating">Thanks for Rating</string>
    <string name="submit">Submit</string>
    <string name="internet_not_connected">Please connect to internet</string>
    <string name="server_no_conn">Server not connected</string>
    <string name="tab_fav_text_1">Wallpapers</string>
    <string name="tab_fav_text_2">GIFs</string>
    <string name="downloads">Downloads</string>
    <string name="gif_saved">GIF saved</string>
    <string name="gif_already_saved">GIF already saved</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>
    <string name="your_ad_consent">Your Ad Consent</string>
    <string name="show_personalized_ad">Show Personalized Ads</string>
    <string name="enable_push_noti">Enable Push Notification</string>
    <string name="version">Version</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="downloading_gif">Downloading GIF</string>
    <string name="enter_rating">Please enter rating</string>
    <string name="download_path">Download Path</string>
    <string name="get_more_wall">Get more amazing wallpapers, download now</string>
    <string name="get_more_gif">Get more amazing GIFs, download now</string>
    <string name="rate_this_wall">Rate this Wallpaper</string>
    <string name="rate_this_gif">Rate this GIF</string>
    <string name="crop">Crop</string>
    <string name="dashboard">Dashboard</string>
    <string name="landscape_wallpaper">Landscape Wallpaper</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="square">Square</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="select_wall_type">Select Wallpaper Type</string>
    <string name="ok">OK</string>
    <string name="rated">Rated</string>
    <string name="popular">Popular</string>
    <string name="save">Save</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="rate_wall">How likely do you to recommend this app to your friends?</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home_lock_screen">Home Screen and Lock Screen</string>
    <string name="err_set_wall">Error when setting wallpaper</string>
</resources>