<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_gif"
            android:icon="@mipmap/gif"
            android:title="@string/gifs" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@mipmap/fav"
            android:title="@string/favourite" />

    </group>

    <item
        android:id="@+id/nav_shareapp"
        android:icon="@mipmap/share_nav"
        android:title="@string/shareapp" />

    <item
        android:id="@+id/nav_about"
        android:icon="@mipmap/about"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@mipmap/setting"
        android:title="@string/action_settings" />

</menu>