<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:hwads="http://schemas.android.com/tools"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_main_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
                android:id="@+id/infinitViewPager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:icvp_center_page_scale_offset="30dp"
                app:icvp_max_page_scale="0.85"
                app:icvp_medium_scaled="true"
                app:icvp_min_page_scale="0.7"
                app:icvp_min_page_scale_offset="0dp"
                app:icvp_scroll_duration="400"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/line_verticle_home"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/categories"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_cat_all"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/view_all"
                    android:textColor="@color/text_view_all"
                    android:textSize="13sp"/>
                </LinearLayout>
                <com.huawei.hms.ads.banner.BannerView
                    android:layout_weight="1"
                    android:id="@+id/hw_banner_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    hwads:adId="u4jqa6ms9f"
                    android:layout_gravity="bottom"
                    hwads:bannerSize="BANNER_SIZE_360_57"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/tv_empty_home_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="135dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/line_verticle_home"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/portrait_wallpaper"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_portrait_all"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/view_all"
                    android:textColor="@color/text_view_all"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"  />

                <TextView
                    android:id="@+id/tv_empty_home_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="230dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/line_verticle_home"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/landscape_wallpaper"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_landscape_all"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/view_all"
                    android:textColor="@color/text_view_all"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_landscape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"  />

                <TextView
                    android:id="@+id/tv_empty_home_landscape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="125dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/line_verticle_home"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/square_wallpaper"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_square_all"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/view_all"
                    android:textColor="@color/text_view_all"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingBottom="50dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_home_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

                <TextView
                    android:id="@+id/tv_empty_home_square"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/no_data_found"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="160dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_gradient_white" />

            </RelativeLayout>

        </LinearLayout>

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/pb_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:cpb_color="#FFee44"
            app:cpb_colors="@array/pocket_bar_colors"
            app:cpb_max_sweep_angle="300"
            app:cpb_min_sweep_angle="10"
            app:cpb_rotation_speed="1.0"
            app:cpb_stroke_width="4dp"
            app:cpb_sweep_speed="1.0"
            android:layout_centerInParent="true"  />

    </RelativeLayout>

</ScrollView>